Correct layout for 20 cards page for better visibility on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,6 +348,7 @@ form input[type="submit"] {
     padding: 1rem 2rem;
     display: block;
     border-radius: 30px;
+    background-color: white;
 }
 
 #new-game:hover {
@@ -399,6 +400,16 @@ form input[type="submit"] {
         height: 440px;
     }
 
+    .cards20-board {
+        width: 440px;
+        height: 550px;  
+    }
+
+    .twenty-cards {
+        flex-basis: calc(25% - 10px);
+        height: calc(20% - 10px);
+    }
+
     .wrapper {
         padding: 3rem 0;
     }
@@ -441,6 +452,16 @@ form input[type="submit"] {
     .memory-game {
         width: 300px;
         height: 300px;
+    }
+
+    .cards20-board {
+        width: 300px;
+        height: 375px;  
+    }
+
+    .twenty-cards {
+        flex-basis: calc(25% - 10px);
+        height: calc(20% - 10px);
     }
 
     .wrapper {
